# Alacarte-Rectgen

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
examples/: quickstart.py
scripts/: stress_test_alacarte.sh
src/alacarte_rectgen/: __init__.py  core.py
tests/: test_api.py
